add first POC jni wrapper

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ add_subdirectory(../waves-c build)
 
 project(zap)
 
-set(SOURCE zap.c)
+set(SOURCE zap.c zap_jni.c)
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE})
 target_link_libraries(${PROJECT_NAME} waves_c)
