add libcurl to build

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *~
 *.swp
+*.swo
 
 ### CMake template
 CMakeCache.txt
@@ -15,6 +16,8 @@ CTestTestfile.cmake
 generated-src/
 test/build
 deps/openssl
+deps/curl-android-ios-*
 src/ndk_build
 src/build
 src/openssl-dev-1.0.2o-android.tar.gz
+src/libcurl-android-ios.zip
