--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "deps/djinni"]
 	path = deps/djinni
 	url = https://github.com/dropbox/djinni.git
+[submodule "trezor-crypto"]
+	path = trezor-crypto
+	url = https://github.com/trezor/trezor-crypto.git
