--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.0)
 
 add_subdirectory(../src build)
 
+set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++")
 project(test_libzap)
 
 set(SOURCE test.cpp)
