--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,15 +34,20 @@ set(SOURCE zap.c)
 if (ANDROID)
     create_resources(resources resources.c)
     set(SOURCE ${SOURCE} zap_jni.c)
+    set(LOG_LIBRARIES log)
+endif()
+if (ANDROID OR IOS)
+    set(ZLIB_LIBRARY "-lz")
+    find_package(ZLIB REQUIRED) 
     include_directories(${CURL_INCLUDE_DIR})
     include_directories(../deps/jansson-2.11/src)
     include_directories(../deps/jansson-2.11/android)
-    set(ZLIB_LIBRARY "-lz")
-    find_package(ZLIB REQUIRED) 
-    set(LOG_LIBRARIES log)
+endif()
+if (IOS)
+    set(SECURITY_LIBRARIES "-framework Security")
 endif()
 
 set(CURL_LIBRARY "-lcurl") 
 find_package(CURL REQUIRED) 
 add_library(${PROJECT_NAME} SHARED ${SOURCE} ${BIP39_SOURCE})
-target_link_libraries(${PROJECT_NAME} waves_c jansson ${CURL_LIBRARIES} ${ZLIB_LIBRARIES} ${LOG_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} waves_c jansson ${CURL_LIBRARIES} ${ZLIB_LIBRARIES} ${LOG_LIBRARIES} ${SECURITY_LIBRARIES})
