build static lib, combine all dependent libs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,6 +30,7 @@ set(TREZOR ../deps/trezor-crypto/)
 set(BIP39_SOURCE ${TREZOR}/bip39.c ${TREZOR}/hmac.c ${TREZOR}/rand.c ${TREZOR}/sha2.c ${TREZOR}/pbkdf2.c ${TREZOR}/memzero.c)
 
 set(SOURCE zap.c)
+set(LIBRARY_TYPE SHARED)
 
 if (ANDROID)
     create_resources(resources resources.c)
@@ -45,9 +46,10 @@ if (ANDROID OR IOS)
 endif()
 if (IOS)
     set(SECURITY_LIBRARIES "-framework Security")
+    set(LIBRARY_TYPE STATIC)
 endif()
 
 set(CURL_LIBRARY "-lcurl") 
 find_package(CURL REQUIRED) 
-add_library(${PROJECT_NAME} SHARED ${SOURCE} ${BIP39_SOURCE})
+add_library(${PROJECT_NAME} ${LIBRARY_TYPE} ${SOURCE} ${BIP39_SOURCE})
 target_link_libraries(${PROJECT_NAME} waves_c jansson ${CURL_LIBRARIES} ${ZLIB_LIBRARIES} ${LOG_LIBRARIES} ${SECURITY_LIBRARIES})
