build zlib directly to get around strange ios zlib issues

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,15 +36,17 @@ if (ANDROID)
     create_resources(resources resources.c)
     set(SOURCE ${SOURCE} zap_jni.c)
     set(LOG_LIBRARIES log)
+    set(ZLIB_LIBRARY "-lz")
+    find_package(ZLIB REQUIRED)
 endif()
 if (ANDROID OR IOS)
-    set(ZLIB_LIBRARY "-lz")
-    find_package(ZLIB REQUIRED) 
     include_directories(${CURL_INCLUDE_DIR})
     include_directories(../deps/jansson-2.11/src)
     include_directories(../deps/jansson-2.11/android)
 endif()
 if (IOS)
+    add_subdirectory(../deps/zlib build/zlib)
+    set(ZLIB_LIBRARIES z)
     set(SECURITY_LIBRARIES "-framework Security")
     set(LIBRARY_TYPE STATIC)
 endif()
@@ -52,4 +54,4 @@ endif()
 set(CURL_LIBRARY "-lcurl") 
 find_package(CURL REQUIRED) 
 add_library(${PROJECT_NAME} ${LIBRARY_TYPE} ${SOURCE} ${BIP39_SOURCE})
-target_link_libraries(${PROJECT_NAME} waves_c jansson ${CURL_LIBRARIES} ${ZLIB_LIBRARIES} ${LOG_LIBRARIES} ${SECURITY_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} waves_c jansson ${ZLIB_LIBRARIES} ${CURL_LIBRARIES} ${LOG_LIBRARIES} ${SECURITY_LIBRARIES})
