--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "trezor-crypto"]
 	path = deps/trezor-crypto
 	url = https://github.com/trezor/trezor-crypto.git
+[submodule "deps/zlib"]
+	path = deps/zlib
+	url = https://github.com/madler/zlib.git
