--- a/.gitignore
+++ b/.gitignore
@@ -3,27 +3,18 @@
 *.swo
 .DS_Store
 
-### CMake template
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
-Makefile
-cmake_install.cmake
-install_manifest.txt
-compile_commands.json
-CTestTestfile.cmake
-
 generated-src/
-test/build
 deps/openssl-android.tar.gz
 deps/openssl-ios.tar.gz
-deps/openssl
+deps/android/openssl
+deps/ios/openssl
 deps/libcurl-android-ios.zip
 deps/curl-android-ios-*
 deps/jansson_v2.11.zip
 deps/jansson-*
-src/ndk_build
-src/xcode_build
-src/build
-src/libzap_combined.a
+builds/mac
+builds/linux
+builds/android
+builds/ndk_build
+builds/ios
+builds/xcode_build
