--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -65,3 +65,13 @@ endif()
 
 add_library(${PROJECT_NAME} ${LIBRARY_TYPE} ${SOURCE} ${BIP39_SOURCE})
 target_link_libraries(${PROJECT_NAME} waves_c jansson ${ZLIB_LIBRARIES} curl ${CURL_LIBRARIES} ${LOG_LIBRARIES} ${SECURITY_LIBRARIES})
+if (IOS AND NOT BUILD_STATIC)
+    set_target_properties(${PROJECT_NAME} PROPERTIES
+        FRAMEWORK TRUE
+        MACOSX_FRAMEWORK_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist
+        MACOSX_FRAMEWORK_IDENTIFIER com.djpsoft.libzap
+        MACOSX_FRAMEWORK_BUNDLE_VERSION "1"
+        MACOSX_FRAMEWORK_SHORT_VERSION_STRING "1.0"
+        PUBLIC_HEADER zap.h
+    )
+endif()
